--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-size: 18px;
+  
 }
 
+
+h1,h2,h3,h4,h5,h6{
+  padding: 0;
+  margin:0;
+}
+ul,li{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+p{
+  margin:0px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
